<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/editNameDialog"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:background="@drawable/border"
        android:backgroundTint="#EFEBEB"
        android:backgroundTintMode="multiply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="23dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="23dp"
            android:background="@android:drawable/editbox_background_normal"
            android:ems="10"
            android:hint="@string/edit_dialog_desc"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="#000000"
            android:textColorHint="#514F4F"
            android:textSize="20sp" />

        <Button
            android:id="@+id/ESubmitButton"
            android:layout_width="111dp"
            android:layout_height="52dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="215dp"
            android:layout_marginBottom="19dp"
            android:backgroundTint="#008a02"
            android:gravity="center"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:text="@string/submit"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:cornerRadius="30dp" />

        <Button
            android:id="@+id/ECancelButton"
            android:layout_width="111dp"
            android:layout_height="52dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="215dp"
            android:layout_marginEnd="19dp"
            android:layout_marginBottom="19dp"
            android:backgroundTint="#BD2929"
            android:gravity="center"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:text="@string/cancel"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:cornerRadius="30dp" />

        <TextView
            android:id="@+id/submitInfo"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="30dp"
            android:gravity="center|start"
            android:text="@string/max_char"
            android:textColor="#000000" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>