<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/areYouSureDialog"
        android:layout_width="350dp"
        android:layout_height="170dp"
        android:background="#EFEBEB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499">

        <TextView
            android:id="@+id/sureText"
            android:layout_width="203dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:gravity="center"
            android:importantForAccessibility="no"
            android:text="@string/sure_question"
            android:textColor="#000000"
            android:textSize="24sp" />

        <Button
            android:id="@+id/yesButton"
            android:layout_width="111dp"
            android:layout_height="52dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="215dp"
            android:layout_marginBottom="19dp"
            android:backgroundTint="#008a02"
            android:gravity="center"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:text="@string/yes"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:cornerRadius="30dp"
        />

        <Button
            android:id="@+id/noButton"
            android:layout_width="111dp"
            android:layout_height="52dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="215dp"
            android:layout_marginEnd="19dp"
            android:layout_marginBottom="19dp"
            android:backgroundTint="#CA5959"
            android:gravity="center"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:text="@string/no"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:cornerRadius="30dp"
        />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>