<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WorkoutActivity">

    <TextView
        android:id="@+id/mainHeader"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="#009FDF"
        android:gravity="center|start"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/default_workouts_header"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/workoutListScrollCont"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="135dp"
        android:background="#444544"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/workoutList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
        />
    </ScrollView>


    <RelativeLayout
        android:id="@+id/buttonArea"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/workoutListScrollCont"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainHeader">

        <Button
            android:id="@+id/clearWorkoutsButton"
            android:layout_width="159dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="13dp"
            android:backgroundTint="#E36464"
            android:gravity="center|end"
            android:onClick="areYouSureDialog"
            android:paddingStart="0dp"
            android:paddingEnd="15dp"
            android:text="@string/clear_workouts"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            app:cornerRadius="14dp"
            app:icon="@android:drawable/ic_delete"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="26dp"
            app:iconTint="#FFFFFF" />

        <Button
            android:id="@+id/addWorkoutButton"
            android:layout_width="159dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="#6492ED"
            android:gravity="center|end"
            android:onClick="addWorkout"
            android:paddingStart="10dp"
            android:paddingEnd="20dp"
            android:text="@string/add_workout"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            app:cornerRadius="14dp"
            app:icon="@android:drawable/ic_input_add"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconSize="30dp"
            app:iconTint="#FFFFFF" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>